@@ -15,14 +15,15 @@
  */
 package io.atlasmap.actions;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.util.ArrayList;
 import java.util.Arrays;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import io.atlasmap.v2.Contains;
 import io.atlasmap.v2.Count;
@@ -34,9 +35,9 @@ public class ObjectFieldActionsTest {
 
     @Test
     public void testCount() {
-        assertEquals(new Integer(0), ObjectFieldActions.count(new Count(), new ArrayList<>()));
+        assertEquals(Integer.valueOf(0), ObjectFieldActions.count(new Count(), new ArrayList<>()));
         Object[] array = new Object[] {false, "foo", 2};
-        assertEquals(new Integer(3), ObjectFieldActions.count(new Count(), Arrays.asList(array)));
+        assertEquals(Integer.valueOf(3), ObjectFieldActions.count(new Count(), Arrays.asList(array)));
     }
 
     @Test
@@ -55,9 +56,11 @@ public class ObjectFieldActionsTest {
         assertTrue(ObjectFieldActions.contains(action, Arrays.asList(array)));
     }
 
-    @Test(expected=IllegalArgumentException.class)
+    @Test
     public void testContainsWithNullAction() {
-        ObjectFieldActions.contains(null, Arrays.asList(new Object[] {""}));
+        assertThrows(IllegalArgumentException.class, () -> {
+            ObjectFieldActions.contains(null, Arrays.asList(new Object[] {""}));
+        });
     }
 
     @Test
@@ -78,9 +81,11 @@ public class ObjectFieldActionsTest {
         assertTrue(ObjectFieldActions.equals(action, 'a'));
     }
 
-    @Test(expected=IllegalArgumentException.class)
+    @Test
     public void testEqualsWithNullAction() {
-        ObjectFieldActions.equals(null, "");
+        assertThrows(IllegalArgumentException.class, () -> {
+            ObjectFieldActions.equals(null, "");
+        });
     }
 
     @Test
@@ -99,19 +104,21 @@ public class ObjectFieldActionsTest {
         assertEquals("two", ObjectFieldActions.itemAt(action, Arrays.asList(new Object[] {"one", "two"})));
     }
 
-    @Test(expected = ArrayIndexOutOfBoundsException.class)
+    @Test
     public void testItemAtOutOfBounds() {
-        ItemAt action = new ItemAt();
-        action.setIndex(2);
-        ObjectFieldActions.itemAt(action, Arrays.asList(new Object[] {"one", "two"}));
+        assertThrows(ArrayIndexOutOfBoundsException.class, () -> {
+            ItemAt action = new ItemAt();
+            action.setIndex(2);
+            ObjectFieldActions.itemAt(action, Arrays.asList(new Object[] {"one", "two"}));
+        });
     }
 
     @Test
     public void testLength() {
-        assertEquals(new Integer(-1), ObjectFieldActions.length(new Length(), null));
-        assertEquals(new Integer(0), ObjectFieldActions.length(new Length(), ""));
-        assertEquals(new Integer(5), ObjectFieldActions.length(new Length(), " foo "));
-        assertEquals(new Integer(4), ObjectFieldActions.length(new Length(), true));
-        assertEquals(new Integer(3), ObjectFieldActions.length(new Length(), 169));
+        assertEquals(Integer.valueOf(-1), ObjectFieldActions.length(new Length(), null));
+        assertEquals(Integer.valueOf(0), ObjectFieldActions.length(new Length(), ""));
+        assertEquals(Integer.valueOf(5), ObjectFieldActions.length(new Length(), " foo "));
+        assertEquals(Integer.valueOf(4), ObjectFieldActions.length(new Length(), true));
+        assertEquals(Integer.valueOf(3), ObjectFieldActions.length(new Length(), 169));
     }
 }
