@@ -15,10 +15,10 @@
  */
 package io.atlasmap.itests.validation;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.nio.file.Files;
 import java.nio.file.Paths;
@@ -35,7 +35,7 @@ public class AtlasTestUtil {
     public static BaseFlatPrimitiveClass generateFlatPrimitiveClass(Class<? extends BaseFlatPrimitiveClass> clazz)
             throws Exception {
         Class<?> targetClazz = AtlasTestUtil.class.getClassLoader().loadClass(clazz.getName());
-        BaseFlatPrimitiveClass newObject = (BaseFlatPrimitiveClass) targetClazz.newInstance();
+        BaseFlatPrimitiveClass newObject = (BaseFlatPrimitiveClass) targetClazz.getDeclaredConstructor().newInstance();
 
         newObject.setBooleanField(false);
         newObject.setByteField((byte) 99);
@@ -52,7 +52,7 @@ public class AtlasTestUtil {
             Class<? extends BaseOrder> orderClazz, Class<? extends BaseAddress> addressClazz,
             Class<? extends BaseContact> contactClazz) throws Exception {
         Class<?> targetClazz = AtlasTestUtil.class.getClassLoader().loadClass(orderListClazz.getName());
-        BaseOrderList orderList = (BaseOrderList) targetClazz.newInstance();
+        BaseOrderList orderList = (BaseOrderList) targetClazz.getDeclaredConstructor().newInstance();
         orderList.setNumberOrders(5);
         orderList.setOrderBatchNumber(4123562);
 
@@ -70,7 +70,7 @@ public class AtlasTestUtil {
     public static BaseOrder generateOrderClass(Class<? extends BaseOrder> orderClazz,
             Class<? extends BaseAddress> addressClazz, Class<? extends BaseContact> contactClazz) throws Exception {
         Class<?> targetClazz = AtlasTestUtil.class.getClassLoader().loadClass(orderClazz.getName());
-        BaseOrder newObject = (BaseOrder) targetClazz.newInstance();
+        BaseOrder newObject = (BaseOrder) targetClazz.getDeclaredConstructor().newInstance();
 
         newObject.setOrderId(8765309);
         newObject.setAddress(generateAddress(addressClazz));
@@ -80,7 +80,7 @@ public class AtlasTestUtil {
 
     public static BaseAddress generateAddress(Class<? extends BaseAddress> addressClass) throws Exception {
         Class<?> targetClazz = AtlasTestUtil.class.getClassLoader().loadClass(addressClass.getName());
-        BaseAddress newObject = (BaseAddress) targetClazz.newInstance();
+        BaseAddress newObject = (BaseAddress) targetClazz.getDeclaredConstructor().newInstance();
 
         newObject.setAddressLine1("123 Main St");
         newObject.setAddressLine2("Suite 42b");
@@ -92,7 +92,7 @@ public class AtlasTestUtil {
 
     public static BaseContact generateContact(Class<? extends BaseContact> contactClass) throws Exception {
         Class<?> targetClazz = AtlasTestUtil.class.getClassLoader().loadClass(contactClass.getName());
-        BaseContact newObject = (BaseContact) targetClazz.newInstance();
+        BaseContact newObject = (BaseContact) targetClazz.getDeclaredConstructor().newInstance();
 
         newObject.setFirstName("Ozzie");
         newObject.setLastName("Smith");
@@ -106,8 +106,8 @@ public class AtlasTestUtil {
         assertNotNull(orderListObject.getNumberOrders());
         assertNotNull(orderListObject.getOrderBatchNumber());
 
-        assertEquals(new Integer(5), orderListObject.getNumberOrders());
-        assertEquals(new Integer(4123562), orderListObject.getOrderBatchNumber());
+        assertEquals(Integer.valueOf(5), orderListObject.getNumberOrders());
+        assertEquals(Integer.valueOf(4123562), orderListObject.getOrderBatchNumber());
 
         if (orderListObject.getOrders() != null) {
             for (int i = 0; i < orderListObject.getOrders().size(); i++) {
@@ -119,7 +119,7 @@ public class AtlasTestUtil {
     public static void validateOrder(BaseOrder orderObject) {
         assertNotNull(orderObject);
         assertNotNull(orderObject.getOrderId());
-        assertEquals(new Integer(8765309), orderObject.getOrderId());
+        assertEquals(Integer.valueOf(8765309), orderObject.getOrderId());
         validateAddress(orderObject.getAddress());
         validateContact(orderObject.getContact());
     }
@@ -127,7 +127,7 @@ public class AtlasTestUtil {
     public static void validateOrder(BaseOrder orderObject, int expectedOrderId) {
         assertNotNull(orderObject);
         assertNotNull(orderObject.getOrderId());
-        assertEquals(new Integer(expectedOrderId), orderObject.getOrderId());
+        assertEquals(Integer.valueOf(expectedOrderId), orderObject.getOrderId());
         validateAddress(orderObject.getAddress());
         validateContact(orderObject.getContact());
     }
@@ -155,16 +155,16 @@ public class AtlasTestUtil {
 
     public static void validateFlatPrimitiveClassPrimitiveFieldAutoConversion1(BaseFlatPrimitiveClass targetObject) {
         assertNotNull(targetObject);
-        assertEquals(new Double(40000000d), new Double(targetObject.getDoubleField()));
-        assertEquals(new Float(0f), new Float(targetObject.getFloatField()));
-        assertEquals(new Integer(1), new Integer(targetObject.getIntField()));
-        assertEquals(new Long(50000000L), new Long(targetObject.getLongField()));
-        assertEquals(new Short((short) 30000), new Short(targetObject.getShortField()));
-        assertEquals(new Character('2'), new Character(targetObject.getCharField()));
+        assertEquals(Double.valueOf(40000000d), Double.valueOf(targetObject.getDoubleField()));
+        assertEquals(Float.valueOf(0f), Float.valueOf(targetObject.getFloatField()));
+        assertEquals(Integer.valueOf(1), Integer.valueOf(targetObject.getIntField()));
+        assertEquals(Long.valueOf(50000000L), Long.valueOf(targetObject.getLongField()));
+        assertEquals(Short.valueOf((short) 30000), Short.valueOf(targetObject.getShortField()));
+        assertEquals(Character.valueOf('2'), Character.valueOf(targetObject.getCharField()));
 
         // Primitive auto-initialized values
         assertEquals(false, targetObject.isBooleanField());
-        assertEquals(new Byte((byte) 0), new Byte(targetObject.getByteField()));
+        assertEquals(Byte.valueOf((byte) 0), Byte.valueOf(targetObject.getByteField()));
 
         // Unused by mapping
         assertNull(targetObject.getBooleanArrayField());
@@ -190,17 +190,17 @@ public class AtlasTestUtil {
 
     public static void validateFlatPrimitiveClassPrimitiveFieldAutoConversion2(BaseFlatPrimitiveClass targetObject) {
         assertNotNull(targetObject);
-        assertEquals(new Double(0.0d), new Double(targetObject.getDoubleField()));
-        assertEquals(new Float(97f), new Float(targetObject.getFloatField()));
-        assertEquals(new Integer(30000), new Integer(targetObject.getIntField()));
-        assertEquals(new Long(40000000L), new Long(targetObject.getLongField()));
+        assertEquals(Double.valueOf(0.0d), Double.valueOf(targetObject.getDoubleField()));
+        assertEquals(Float.valueOf(97f), Float.valueOf(targetObject.getFloatField()));
+        assertEquals(Integer.valueOf(30000), Integer.valueOf(targetObject.getIntField()));
+        assertEquals(Long.valueOf(40000000L), Long.valueOf(targetObject.getLongField()));
         // TODO: Fix char validateion
         // assertTrue(Character.valueOf((char)1) == targetObject.getCharField());
 
         // Primitive auto-initialized values
         assertEquals(false, targetObject.isBooleanField());
-        assertEquals(new Byte((byte) 0), new Byte(targetObject.getByteField()));
-        assertEquals(new Short((short) 0), new Short(targetObject.getShortField()));
+        assertEquals(Byte.valueOf((byte) 0), Byte.valueOf(targetObject.getByteField()));
+        assertEquals(Short.valueOf((short) 0), Short.valueOf(targetObject.getShortField()));
 
         // Unused by mapping
         assertNull(targetObject.getBooleanArrayField());
@@ -227,16 +227,16 @@ public class AtlasTestUtil {
     public static void validateFlatPrimitiveClassPrimitiveFieldAutoConversion3(BaseFlatPrimitiveClass targetObject) {
         assertNotNull(targetObject);
         assertEquals(true, targetObject.isBooleanField());
-        assertEquals(new Double(97d), new Double(targetObject.getDoubleField()));
-        assertEquals(new Float(2.0f), new Float(targetObject.getFloatField()));
-        assertEquals(new Integer(50000000), new Integer(targetObject.getIntField()));
-        assertEquals(new Long(0L), new Long(targetObject.getLongField()));
+        assertEquals(Double.valueOf(97d), Double.valueOf(targetObject.getDoubleField()));
+        assertEquals(Float.valueOf(2.0f), Float.valueOf(targetObject.getFloatField()));
+        assertEquals(Integer.valueOf(50000000), Integer.valueOf(targetObject.getIntField()));
+        assertEquals(Long.valueOf(0L), Long.valueOf(targetObject.getLongField()));
         // TODO: fix char validation
         // assertTrue(Character.valueOf((char)30000) == targetObject.getCharField());
 
         // Primitive auto-initialized values
-        assertEquals(new Byte((byte) 0), new Byte(targetObject.getByteField()));
-        assertEquals(new Short((short) 0), new Short(targetObject.getShortField()));
+        assertEquals(Byte.valueOf((byte) 0), Byte.valueOf(targetObject.getByteField()));
+        assertEquals(Short.valueOf((short) 0), Short.valueOf(targetObject.getShortField()));
 
         // Unused by mapping
         assertNull(targetObject.getBooleanArrayField());
@@ -262,15 +262,15 @@ public class AtlasTestUtil {
 
     public static void validateFlatPrimitiveClassPrimitiveFieldAutoConversion4(BaseFlatPrimitiveClass targetObject) {
         assertNotNull(targetObject);
-        assertEquals(new Double(2.0d), new Double(targetObject.getDoubleField()));
-        assertEquals(new Float(1.0f), new Float(targetObject.getFloatField()));
-        assertEquals(new Integer(40000000), new Integer(targetObject.getIntField()));
-        assertEquals(new Long(97L), new Long(targetObject.getLongField()));
-        assertEquals(new Short((short) 0), new Short(targetObject.getShortField()));
+        assertEquals(Double.valueOf(2.0d), Double.valueOf(targetObject.getDoubleField()));
+        assertEquals(Float.valueOf(1.0f), Float.valueOf(targetObject.getFloatField()));
+        assertEquals(Integer.valueOf(40000000), Integer.valueOf(targetObject.getIntField()));
+        assertEquals(Long.valueOf(97L), Long.valueOf(targetObject.getLongField()));
+        assertEquals(Short.valueOf((short) 0), Short.valueOf(targetObject.getShortField()));
 
         // Primitive auto-initialized values
         assertEquals(false, targetObject.isBooleanField());
-        assertEquals(new Byte((byte) 0), new Byte(targetObject.getByteField()));
+        assertEquals(Byte.valueOf((byte) 0), Byte.valueOf(targetObject.getByteField()));
         assertTrue(Character.valueOf((char) 0) == targetObject.getCharField());
 
         // Unused by mapping
@@ -297,15 +297,15 @@ public class AtlasTestUtil {
 
     public static void validateFlatPrimitiveClassPrimitiveFieldAutoConversion5(BaseFlatPrimitiveClass targetObject) {
         assertNotNull(targetObject);
-        assertEquals(new Double(1.0d), new Double(targetObject.getDoubleField()));
-        assertEquals(new Float(30000.0f), new Float(targetObject.getFloatField()));
-        assertEquals(new Integer(0), new Integer(targetObject.getIntField()));
-        assertEquals(new Long(2L), new Long(targetObject.getLongField()));
-        assertEquals(new Short((short) 97), new Short(targetObject.getShortField()));
+        assertEquals(Double.valueOf(1.0d), Double.valueOf(targetObject.getDoubleField()));
+        assertEquals(Float.valueOf(30000.0f), Float.valueOf(targetObject.getFloatField()));
+        assertEquals(Integer.valueOf(0), Integer.valueOf(targetObject.getIntField()));
+        assertEquals(Long.valueOf(2L), Long.valueOf(targetObject.getLongField()));
+        assertEquals(Short.valueOf((short) 97), Short.valueOf(targetObject.getShortField()));
 
         // Primitive auto-initialized values
         assertEquals(false, targetObject.isBooleanField());
-        assertEquals(new Byte((byte) 0), new Byte(targetObject.getByteField()));
+        assertEquals(Byte.valueOf((byte) 0), Byte.valueOf(targetObject.getByteField()));
         assertTrue(Character.valueOf((char) 0) == targetObject.getCharField());
 
         // Unused by mapping
@@ -332,16 +332,16 @@ public class AtlasTestUtil {
 
     public static void validateFlatPrimitiveClassPrimitiveFieldAutoConversion6(BaseFlatPrimitiveClass targetObject) {
         assertNotNull(targetObject);
-        assertEquals(new Double(30000.0d), new Double(targetObject.getDoubleField()));
-        assertEquals(new Float(50000000.0f), new Float(targetObject.getFloatField()));
-        assertEquals(new Integer(97), new Integer(targetObject.getIntField()));
-        assertEquals(new Long(1L), new Long(targetObject.getLongField()));
-        assertEquals(new Short((short) 2), new Short(targetObject.getShortField()));
+        assertEquals(Double.valueOf(30000.0d), Double.valueOf(targetObject.getDoubleField()));
+        assertEquals(Float.valueOf(50000000.0f), Float.valueOf(targetObject.getFloatField()));
+        assertEquals(Integer.valueOf(97), Integer.valueOf(targetObject.getIntField()));
+        assertEquals(Long.valueOf(1L), Long.valueOf(targetObject.getLongField()));
+        assertEquals(Short.valueOf((short) 2), Short.valueOf(targetObject.getShortField()));
         assertTrue(Character.valueOf((char) 0) == targetObject.getCharField());
 
         // Primitive auto-initialized values
         assertEquals(false, targetObject.isBooleanField());
-        assertEquals(new Byte((byte) 0), new Byte(targetObject.getByteField()));
+        assertEquals(Byte.valueOf((byte) 0), Byte.valueOf(targetObject.getByteField()));
 
         // Unused by mapping
         assertNull(targetObject.getBooleanArrayField());
@@ -367,14 +367,14 @@ public class AtlasTestUtil {
 
     public static void validateJsonFlatPrimitivePrimitiveFields(io.atlasmap.json.test.BaseFlatPrimitive targetObject) {
         assertNotNull(targetObject);
-        assertEquals(new Double(50000000d), new Double(targetObject.getDoubleField()));
-        assertEquals(new Float(40000000f), new Float(targetObject.getFloatField()));
-        assertEquals(new Integer(2), new Integer(targetObject.getIntField()));
-        assertEquals(new Long(30000L), new Long(targetObject.getLongField().longValue()));
-        assertEquals(new Short((short) 1), new Short(targetObject.getShortField().shortValue()));
+        assertEquals(Double.valueOf(50000000d), Double.valueOf(targetObject.getDoubleField()));
+        assertEquals(Double.valueOf(40000000d), Double.valueOf(targetObject.getFloatField()));
+        assertEquals(Integer.valueOf(2), Integer.valueOf(targetObject.getIntField()));
+        assertEquals(Long.valueOf(30000L), Long.valueOf(targetObject.getLongField().longValue()));
+        assertEquals(Short.valueOf((short) 1), Short.valueOf(targetObject.getShortField().shortValue()));
         assertEquals(Boolean.FALSE, targetObject.getBooleanField());
         // assertEquals(new Byte((byte) 99), new Byte(targetObject.getByteField()));
-        assertEquals(new Character('a'), new Character(targetObject.getCharField().charAt(0)));
+        assertEquals(Character.valueOf('a'), Character.valueOf(targetObject.getCharField().charAt(0)));
         assertNotNull(targetObject.getBooleanArrayField());
         assertTrue(targetObject.getBooleanArrayField().isEmpty());
         assertNotNull(targetObject.getBoxedBooleanArrayField());
@@ -407,15 +407,15 @@ public class AtlasTestUtil {
 
     public static void validateJsonFlatPrimitiveBoxedPrimitiveFields(
             io.atlasmap.json.test.BaseFlatPrimitive targetObject) {
-        assertEquals(new Double(90000000d), new Double(targetObject.getBoxedDoubleField()));
-        assertEquals(new Float(70000000f), new Float(targetObject.getBoxedFloatField()));
-        assertEquals(new Integer(5), new Integer(targetObject.getBoxedIntField()));
-        assertEquals(new Long(20000L), new Long(targetObject.getBoxedLongField().longValue()));
-        assertEquals(new Short((short) 5), new Short(targetObject.getBoxedShortField().shortValue()));
-        assertEquals(new Boolean(Boolean.TRUE), targetObject.getBoxedBooleanField());
+        assertEquals(Double.valueOf(90000000d), Double.valueOf(targetObject.getBoxedDoubleField()));
+        assertEquals(Double.valueOf(70000000f), Double.valueOf(targetObject.getBoxedFloatField()));
+        assertEquals(Integer.valueOf(5), Integer.valueOf(targetObject.getBoxedIntField()));
+        assertEquals(Long.valueOf(20000L), Long.valueOf(targetObject.getBoxedLongField().longValue()));
+        assertEquals(Short.valueOf((short) 5), Short.valueOf(targetObject.getBoxedShortField().shortValue()));
+        assertEquals(Boolean.valueOf(Boolean.TRUE), targetObject.getBoxedBooleanField());
         // assertEquals(new Byte((byte) 87), new
         // Byte(targetObject.getBoxedByteField()));
-        assertEquals(new Character('z'), new Character(targetObject.getBoxedCharField().charAt(0)));
+        assertEquals(Character.valueOf('z'), Character.valueOf(targetObject.getBoxedCharField().charAt(0)));
         assertNotNull(targetObject.getBooleanArrayField());
         assertTrue(targetObject.getBooleanArrayField().isEmpty());
         assertNotNull(targetObject.getBoxedBooleanArrayField());
@@ -450,7 +450,7 @@ public class AtlasTestUtil {
     public static void validateJsonOrder(io.atlasmap.json.test.BaseOrder orderObject) {
         assertNotNull(orderObject);
         assertNotNull(orderObject.getOrderId());
-        assertEquals(new Integer(8765309), orderObject.getOrderId());
+        assertEquals(Integer.valueOf(8765309), orderObject.getOrderId());
         validateJsonAddress(orderObject.getAddress());
         validateJsonContact(orderObject.getContact());
     }
@@ -458,7 +458,7 @@ public class AtlasTestUtil {
     public static void validateJsonOrder(io.atlasmap.json.test.BaseOrder orderObject, int expectedOrderId) {
         assertNotNull(orderObject);
         assertNotNull(orderObject.getOrderId());
-        assertEquals(new Integer(expectedOrderId), orderObject.getOrderId());
+        assertEquals(Integer.valueOf(expectedOrderId), orderObject.getOrderId());
         validateJsonAddress(orderObject.getAddress());
         validateJsonContact(orderObject.getContact());
     }
@@ -483,12 +483,12 @@ public class AtlasTestUtil {
     public static void validateJsonFlatPrimitivePrimitiveFieldAutoConversion1(
             io.atlasmap.json.test.BaseFlatPrimitive targetObject) {
         assertNotNull(targetObject);
-        assertEquals(new Double(40000000d), new Double(targetObject.getDoubleField()));
-        assertEquals(new Float(0f), new Float(targetObject.getFloatField()));
-        assertEquals(new Integer(1), new Integer(targetObject.getIntField()));
-        assertEquals(new Long(50000000L), new Long(targetObject.getLongField().longValue()));
-        assertEquals(new Short((short) 30000), new Short(targetObject.getShortField().shortValue()));
-        assertEquals(new Character('2'), new Character(targetObject.getCharField().charAt(0)));
+        assertEquals(Double.valueOf(40000000d), Double.valueOf(targetObject.getDoubleField()));
+        assertEquals(Double.valueOf(0d), Double.valueOf(targetObject.getFloatField()));
+        assertEquals(Integer.valueOf(1), Integer.valueOf(targetObject.getIntField()));
+        assertEquals(Long.valueOf(50000000L), Long.valueOf(targetObject.getLongField().longValue()));
+        assertEquals(Short.valueOf((short) 30000), Short.valueOf(targetObject.getShortField().shortValue()));
+        assertEquals(Character.valueOf('2'), Character.valueOf(targetObject.getCharField().charAt(0)));
 
         // Primitive auto-initialized values
         assertNull(targetObject.getBooleanField());
@@ -528,11 +528,11 @@ public class AtlasTestUtil {
     public static void validateJsonFlatPrimitivePrimitiveFieldAutoConversion2(
             io.atlasmap.json.test.BaseFlatPrimitive targetObject) {
         assertNotNull(targetObject);
-        assertEquals(new Double(0.0d), new Double(targetObject.getDoubleField()));
-        assertEquals(new Float(97f), new Float(targetObject.getFloatField()));
-        assertEquals(new Integer(30000), new Integer(targetObject.getIntField()));
-        assertEquals(new Long(40000000L), new Long(targetObject.getLongField().longValue()));
-        assertEquals(new Character('1'), new Character(targetObject.getCharField().charAt(0)));
+        assertEquals(Double.valueOf(0.0d), Double.valueOf(targetObject.getDoubleField()));
+        assertEquals(Double.valueOf(97d), Double.valueOf(targetObject.getFloatField()));
+        assertEquals(Integer.valueOf(30000), Integer.valueOf(targetObject.getIntField()));
+        assertEquals(Long.valueOf(40000000L), Long.valueOf(targetObject.getLongField().longValue()));
+        assertEquals(Character.valueOf('1'),  Character.valueOf(targetObject.getCharField().charAt(0)));
 
         // Primitive auto-initialized values
         assertNull(targetObject.getBooleanField());
@@ -574,10 +574,10 @@ public class AtlasTestUtil {
             io.atlasmap.json.test.BaseFlatPrimitive targetObject) {
         assertNotNull(targetObject);
         assertEquals(true, targetObject.getBooleanField());
-        assertEquals(new Double(97d), new Double(targetObject.getDoubleField()));
-        assertEquals(new Float(2.0f), new Float(targetObject.getFloatField()));
-        assertEquals(new Integer(50000000), new Integer(targetObject.getIntField()));
-        assertEquals(new Long(0L), new Long(targetObject.getLongField().longValue()));
+        assertEquals(Double.valueOf(97d), Double.valueOf(targetObject.getDoubleField()));
+        assertEquals(Double.valueOf(2.0d), Double.valueOf(targetObject.getFloatField()));
+        assertEquals(Integer.valueOf(50000000), Integer.valueOf(targetObject.getIntField()));
+        assertEquals(Long.valueOf(0L), Long.valueOf(targetObject.getLongField().longValue()));
         // TODO: fix char validation
         // assertTrue(Character.valueOf((char)30000) == targetObject.getCharField());
 
@@ -619,11 +619,11 @@ public class AtlasTestUtil {
     public static void validateJsonFlatPrimitivePrimitiveFieldAutoConversion4(
             io.atlasmap.json.test.BaseFlatPrimitive targetObject) {
         assertNotNull(targetObject);
-        assertEquals(new Double(2.0d), new Double(targetObject.getDoubleField()));
-        assertEquals(new Float(1.0f), new Float(targetObject.getFloatField()));
-        assertEquals(new Integer(40000000), new Integer(targetObject.getIntField()));
-        assertEquals(new Long(97L), new Long(targetObject.getLongField().longValue()));
-        assertEquals(new Short((short) 0), new Short(targetObject.getShortField().shortValue()));
+        assertEquals(Double.valueOf(2.0d), Double.valueOf(targetObject.getDoubleField()));
+        assertEquals(Double.valueOf(1.0f), Double.valueOf(targetObject.getFloatField()));
+        assertEquals(Integer.valueOf(40000000), Integer.valueOf(targetObject.getIntField()));
+        assertEquals(Long.valueOf(97L), Long.valueOf(targetObject.getLongField().longValue()));
+        assertEquals(Short.valueOf((short) 0), Short.valueOf(targetObject.getShortField().shortValue()));
 
         // Primitive auto-initialized values
         assertNull(targetObject.getBooleanField());
@@ -664,11 +664,11 @@ public class AtlasTestUtil {
     public static void validateJsonFlatPrimitivePrimitiveFieldAutoConversion5(
             io.atlasmap.json.test.BaseFlatPrimitive targetObject) {
         assertNotNull(targetObject);
-        assertEquals(new Double(1.0d), new Double(targetObject.getDoubleField()));
-        assertEquals(new Float(30000.0f), new Float(targetObject.getFloatField()));
-        assertEquals(new Integer(0), new Integer(targetObject.getIntField()));
-        assertEquals(new Long(2L), new Long(targetObject.getLongField().longValue()));
-        assertEquals(new Short((short) 97), new Short(targetObject.getShortField().shortValue()));
+        assertEquals(Double.valueOf(1.0d), Double.valueOf(targetObject.getDoubleField()));
+        assertEquals(Double.valueOf(30000.0d), Double.valueOf(targetObject.getFloatField()));
+        assertEquals(Integer.valueOf(0), Integer.valueOf(targetObject.getIntField()));
+        assertEquals(Long.valueOf(2L), Long.valueOf(targetObject.getLongField().longValue()));
+        assertEquals(Short.valueOf((short) 97), Short.valueOf(targetObject.getShortField().shortValue()));
 
         // Primitive auto-initialized values
         assertNull(targetObject.getBooleanField());
@@ -709,11 +709,11 @@ public class AtlasTestUtil {
     public static void validateJsonFlatPrimitivePrimitiveFieldAutoConversion6(
             io.atlasmap.json.test.BaseFlatPrimitive targetObject) {
         assertNotNull(targetObject);
-        assertEquals(new Double(30000.0d), new Double(targetObject.getDoubleField()));
-        assertEquals(new Float(50000000.0f), new Float(targetObject.getFloatField()));
-        assertEquals(new Integer(97), new Integer(targetObject.getIntField()));
-        assertEquals(new Long(1L), new Long(targetObject.getLongField().longValue()));
-        assertEquals(new Short((short) 2), new Short(targetObject.getShortField().shortValue()));
+        assertEquals(Double.valueOf(30000.0d), Double.valueOf(targetObject.getDoubleField()));
+        assertEquals(Double.valueOf(50000000.0d), Double.valueOf(targetObject.getFloatField()));
+        assertEquals(Integer.valueOf(97), Integer.valueOf(targetObject.getIntField()));
+        assertEquals(Long.valueOf(1L), Long.valueOf(targetObject.getLongField().longValue()));
+        assertEquals(Short.valueOf((short) 2), Short.valueOf(targetObject.getShortField().shortValue()));
         assertTrue(Character.valueOf((char) 0) == targetObject.getCharField().charAt(0));
 
         // Primitive auto-initialized values
